--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="normalize.css" />
-    <link rel="stylesheet" href="main.css" />
-    <link rel="stylesheet" href="header.css" />
-    <link rel="stylesheet" href="bid.css" />
-    <link rel="stylesheet" href="block_advantage.css" />
-    <link rel="stylesheet" href="var.css" />
-    <link rel="stylesheet" href="block_forma.css" />
+    <link rel="stylesheet" href="css/var.css" />
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/bid.css" />
+    <link rel="stylesheet" href="css/header.css" />
+    <link rel="stylesheet" href="css/block_advantage.css" />
+    <link rel="stylesheet" href="css/block_forma.css" />
+    <link rel="stylesheet" href="css/support.css" />
     <title>Prodaem kolesa</title>
   </head>
   <body>
@@ -330,5 +331,49 @@
       </div>
     </div>
     <!--block_forma-->
+    <section class="support">
+      <div class="container">
+        <h2 class="support-title">Окажем поддержку</h2>
+        <div class="support-description">
+          <img
+            src="suport-img.png"
+            alt="girl"
+            class="support-description-img"
+          />
+          <div class="support-description-block1">
+            <div class="support-description-part">
+              <h3>Маркетинг</h3>
+              <p>
+                Передаем и помогаем применять удачные кейсы повышения продаж
+              </p>
+            </div>
+            <div class="support-description-part">
+              <h3>Сопровождение</h3>
+              <p>Курируем бизнес на старте и предлагаем точки роста</p>
+            </div>
+            <div class="support-description-part">
+              <h3>Обучение</h3>
+              <p>
+                Проводим курсы по повышению квалификации для вас и сотрудников
+              </p>
+            </div>
+          </div>
+          <div class="support-description-block2">
+            <div class="support-description-part">
+              <h3>Забота</h3>
+              <p>Помощь и разбор нестандартных ситуаций</p>
+            </div>
+            <div class="support-description-part">
+              <h3>Продажи</h3>
+              <p>Быстрая обработка заявок и информарование об акциях</p>
+            </div>
+            <div class="support-description-part">
+              <h3>Техническая поддержка</h3>
+              <p>Подбор и комплектация оборудования, запчастей</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
