--- a/index.html
+++ b/index.html
@@ -344,32 +344,46 @@
             <div class="support-description-part">
               <h3>Маркетинг</h3>
               <p>
-                Передаем и помогаем применять удачные кейсы повышения продаж
+                Передаем и помогаем применять<br />
+                удачные кейсы повышения продаж
               </p>
             </div>
             <div class="support-description-part">
               <h3>Сопровождение</h3>
-              <p>Курируем бизнес на старте и предлагаем точки роста</p>
+              <p>
+                Курируем бизнес на старте и предлагаем<br />
+                точки роста
+              </p>
             </div>
             <div class="support-description-part">
               <h3>Обучение</h3>
               <p>
-                Проводим курсы по повышению квалификации для вас и сотрудников
+                Проводим курсы по повышению <br />
+                квалификации для вас и сотрудников
               </p>
             </div>
           </div>
           <div class="support-description-block2">
             <div class="support-description-part">
               <h3>Забота</h3>
-              <p>Помощь и разбор нестандартных ситуаций</p>
+              <p>
+                Помощь и разбор нестандартных<br />
+                ситуаций
+              </p>
             </div>
             <div class="support-description-part">
               <h3>Продажи</h3>
-              <p>Быстрая обработка заявок и информарование об акциях</p>
+              <p>
+                Быстрая обработка заявок и<br />
+                информарование об акциях
+              </p>
             </div>
             <div class="support-description-part">
               <h3>Техническая поддержка</h3>
-              <p>Подбор и комплектация оборудования, запчастей</p>
+              <p>
+                Подбор и комплектация оборудования,<br />
+                запчастей
+              </p>
             </div>
           </div>
         </div>
