--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
             alt="girl"
             class="support-description-img"
           />
-          <div class="support-description-block1">
+          <div class="support-description-block">
             <div class="support-description-part">
               <h3>Маркетинг</h3>
               <p>
@@ -358,7 +358,49 @@
               </p>
             </div>
           </div>
-          <div class="support-description-block2">
+          <div class="support-description-block">
+            <div class="support-description-part">
+              <h3>Забота</h3>
+              <p>Помощь и разбор нестандартных ситуаций</p>
+            </div>
+            <div class="support-description-part">
+              <h3>Продажи</h3>
+              <p>Быстрая обработка заявок и информарование об акциях</p>
+            </div>
+            <div class="support-description-part">
+              <h3>Техническая поддержка</h3>
+              <p>
+                Подбор и комплектация оборудования,<br />
+                запчастей
+              </p>
+            </div>
+          </div>
+        </div>
+        <img
+          src="Block-advantage-image-mob.png"
+          alt="girl"
+          class="support-description-img-middle"
+        />
+        <div class="support-description-middle">
+          <div class="support-description-block">
+            <div class="support-description-part">
+              <h3>Маркетинг</h3>
+              <p>
+                Передаем и помогаем применять удачные кейсы повышения продаж
+              </p>
+            </div>
+            <div class="support-description-part">
+              <h3>Сопровождение</h3>
+              <p>Курируем бизнес на старте и предлагаем точки роста</p>
+            </div>
+            <div class="support-description-part">
+              <h3>Обучение</h3>
+              <p>
+                Проводим курсы по повышению квалификации для вас и сотрудников
+              </p>
+            </div>
+          </div>
+          <div class="support-description-block">
             <div class="support-description-part">
               <h3>Забота</h3>
               <p>Помощь и разбор нестандартных ситуаций</p>
