--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/block_advantage.css" />
     <link rel="stylesheet" href="css/block_forma.css" />
     <link rel="stylesheet" href="css/support.css" />
+    <link rel="stylesheet" href="css/calc.css" />
     <title>Prodaem kolesa</title>
   </head>
   <body>
@@ -319,18 +320,19 @@
             </div>
             <button class="forma-bid-button-middle">Оставить заявку</button>
             <div class="block-forma-menu1-content-list-middle">
-              <button class="block-forma-menu1-content-list-button-middle">
+              <a class="block-forma-menu1-content-list-a-middle">
                 Фотогалерея
-              </button>
-              <button class="block-forma-menu1-content-list-button-middle">
+              </a>
+              <a class="block-forma-menu1-content-list-a-middle">
                 Калькулятор дохода
-              </button>
+              </a>
             </div>
           </div>
         </div>
       </div>
     </div>
     <!--block_forma-->
+    <!--block_support-->
     <section class="support">
       <div class="container">
         <h2 class="support-title">Окажем поддержку</h2>
@@ -420,5 +422,110 @@
         </div>
       </div>
     </section>
+    <!--block_support-->
+    <!--block_calc-->
+    <section class="calc">
+      <div class="container">
+        <h2 class="block-forma-title">Калькулятор дохода</h2>
+        <div class="calc-forma-menu">
+          <div class="calc-forma-menu1">
+            <div class="block-forma-menu1-buttons">
+              <button class="block-forma-menu1-button">Шинный центр</button>
+              <button class="block-forma-menu1-button">
+                Пункт выдачи заказов
+              </button>
+            </div>
+            <h4 class="block-forma-menu1-title4">Настройте свои метрики</h4>
+            <div class="calc-forma-swipe-tabs">
+              <div class="calc-forma-slider-price-block">
+                <div class="calc-forma-slider-price">
+                  <input type="text" class="calc-forma-slider-price-input" <p>Товарооборот</p>
+                  <div class="calc-forma-edit">
+                    <h4 class="calc-forma-edit-title4">3 000 000 ₽</h4>
+                    <img class="calc-point" src="point.svg" alt="point" />
+                  </div>>
+                  <div class="calc-slider">
+                    <div class="vopros"></div>
+                    <div class="calc-slider-price">
+                      <p class="price-title">500 000 ₽</p>
+                      <p class="price-title">3 000 000 ₽</p>
+                      <p class="price-title">5 000 000 ₽</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="calc-forma-slider-price">
+                  <p>Стоимость аренды</p>
+                  <div class="calc-forma-edit">
+                    <h4 class="calc-forma-edit-title4">50 000 ₽</h4>
+                    <img class="calc-point" src="point.svg" alt="point" />
+                  </div>
+                  <div class="calc-slider">
+                    <div class="vopros"></div>
+                    <div class="calc-slider-price">
+                      <p class="price-title">0 ₽</p>
+                      <p class="price-title">50 000 ₽</p>
+                      <p class="price-title">300 000 ₽</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="calc-forma-slider-price-block">
+                <div class="calc-forma-slider-price">
+                  <p>Фонд оплаты труда</p>
+                  <div class="calc-forma-edit">
+                    <h4 class="calc-forma-edit-title4">100 000 ₽</h4>
+                    <img class="calc-point" src="point.svg" alt="point" />
+                  </div>
+                  <div class="calc-slider">
+                    <div class="vopros"></div>
+                    <div class="calc-slider-price">
+                      <p class="price-title">0 ₽</p>
+                      <p class="price-title">100 000 ₽</p>
+                      <p class="price-title">300 000 ₽</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="calc-forma-slider-price">
+                  <p>Прочие расходы</p>
+                  <div class="calc-forma-edit">
+                    <h4 class="calc-forma-edit-title4">30 000 ₽</h4>
+                    <img class="calc-point" src="point.svg" alt="point" />
+                  </div>
+                  <div class="calc-slider">
+                    <div class="vopros"></div>
+                    <div class="calc-slider-price">
+                      <p class="price-title">0 ₽</p>
+                      <p class="price-title">30 000 ₽</p>
+                      <p class="price-title">200 000 ₽</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="block-forma-menu2">
+            <div class="block_forma_title_income">
+              <h4 class="block-forma-menu2-title4">Итого</h4>
+            </div>
+            <div class="block-forma-menu2-contant">
+              <div class="block-forma-menu2-contact-description">
+                <h3 class="block-forma-menu2-contact-description-price">
+                  465 000 ₽
+                </h3>
+                <p>Ваш вознаграждение</p>
+              </div>
+              <div class="block-forma-menu2-contact-description">
+                <h3 class="block-forma-menu2-contact-description-price">
+                  285 000 ₽
+                </h3>
+                <p>Ваша прибыль</p>
+              </div>
+            </div>
+            <button class="forma-bid-button">Оставить заявку</button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--block_calc-->
   </body>
 </html>
