--- a/index.html
+++ b/index.html
@@ -437,67 +437,67 @@
             </div>
             <h4 class="block-forma-menu1-title4">Настройте свои метрики</h4>
             <div class="calc-forma-swipe-tabs">
-              <div class="calc-forma-slider-price-block">
-                <div class="calc-forma-slider-price">
-                  <input type="text" class="calc-forma-slider-price-input" <p>Товарооборот</p>
+              <div class="calc-forma-slider-price">
+                <label class="calc-forma-all">
+                  <p>Товарооборот</p>
                   <div class="calc-forma-edit">
                     <h4 class="calc-forma-edit-title4">3 000 000 ₽</h4>
                     <img class="calc-point" src="point.svg" alt="point" />
-                  </div>>
-                  <div class="calc-slider">
-                    <div class="vopros"></div>
-                    <div class="calc-slider-price">
-                      <p class="price-title">500 000 ₽</p>
-                      <p class="price-title">3 000 000 ₽</p>
-                      <p class="price-title">5 000 000 ₽</p>
-                    </div>
                   </div>
-                </div>
-                <div class="calc-forma-slider-price">
-                  <p>Стоимость аренды</p>
-                  <div class="calc-forma-edit">
-                    <h4 class="calc-forma-edit-title4">50 000 ₽</h4>
-                    <img class="calc-point" src="point.svg" alt="point" />
-                  </div>
-                  <div class="calc-slider">
-                    <div class="vopros"></div>
-                    <div class="calc-slider-price">
-                      <p class="price-title">0 ₽</p>
-                      <p class="price-title">50 000 ₽</p>
-                      <p class="price-title">300 000 ₽</p>
-                    </div>
+                  <input type="range" class="calc-forma-slider-price-input" />
+                </label>
+                <div class="calc-slider">
+                  <div class="vopros"></div>
+                  <div class="calc-slider-price">
+                    <p class="price-title">500 000 ₽</p>
+                    <p class="price-title">3 000 000 ₽</p>
+                    <p class="price-title">5 000 000 ₽</p>
                   </div>
                 </div>
               </div>
-              <div class="calc-forma-slider-price-block">
-                <div class="calc-forma-slider-price">
-                  <p>Фонд оплаты труда</p>
-                  <div class="calc-forma-edit">
-                    <h4 class="calc-forma-edit-title4">100 000 ₽</h4>
-                    <img class="calc-point" src="point.svg" alt="point" />
-                  </div>
-                  <div class="calc-slider">
-                    <div class="vopros"></div>
-                    <div class="calc-slider-price">
-                      <p class="price-title">0 ₽</p>
-                      <p class="price-title">100 000 ₽</p>
-                      <p class="price-title">300 000 ₽</p>
-                    </div>
+              <div class="calc-forma-slider-price">
+                <p>Стоимость аренды</p>
+                <div class="calc-forma-edit">
+                  <h4 class="calc-forma-edit-title4">50 000 ₽</h4>
+                  <img class="calc-point" src="point.svg" alt="point" />
+                </div>
+                <div class="calc-slider">
+                  <div class="vopros"></div>
+                  <div class="calc-slider-price">
+                    <p class="price-title">0 ₽</p>
+                    <p class="price-title">50 000 ₽</p>
+                    <p class="price-title">300 000 ₽</p>
                   </div>
                 </div>
-                <div class="calc-forma-slider-price">
-                  <p>Прочие расходы</p>
-                  <div class="calc-forma-edit">
-                    <h4 class="calc-forma-edit-title4">30 000 ₽</h4>
-                    <img class="calc-point" src="point.svg" alt="point" />
+              </div>
+
+              <div class="calc-forma-slider-price">
+                <p>Фонд оплаты труда</p>
+                <div class="calc-forma-edit">
+                  <h4 class="calc-forma-edit-title4">100 000 ₽</h4>
+                  <img class="calc-point" src="point.svg" alt="point" />
+                </div>
+                <div class="calc-slider">
+                  <div class="vopros"></div>
+                  <div class="calc-slider-price">
+                    <p class="price-title">0 ₽</p>
+                    <p class="price-title">100 000 ₽</p>
+                    <p class="price-title">300 000 ₽</p>
                   </div>
-                  <div class="calc-slider">
-                    <div class="vopros"></div>
-                    <div class="calc-slider-price">
-                      <p class="price-title">0 ₽</p>
-                      <p class="price-title">30 000 ₽</p>
-                      <p class="price-title">200 000 ₽</p>
-                    </div>
+                </div>
+              </div>
+              <div class="calc-forma-slider-price">
+                <p>Прочие расходы</p>
+                <div class="calc-forma-edit">
+                  <h4 class="calc-forma-edit-title4">30 000 ₽</h4>
+                  <img class="calc-point" src="point.svg" alt="point" />
+                </div>
+                <div class="calc-slider">
+                  <div class="vopros"></div>
+                  <div class="calc-slider-price">
+                    <p class="price-title">0 ₽</p>
+                    <p class="price-title">30 000 ₽</p>
+                    <p class="price-title">200 000 ₽</p>
                   </div>
                 </div>
               </div>
