--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/block_forma.css" />
     <link rel="stylesheet" href="css/support.css" />
     <link rel="stylesheet" href="css/calc.css" />
+    <link rel="stylesheet" href="css/map.css" />
     <title>Prodaem kolesa</title>
   </head>
   <body>
@@ -447,58 +448,54 @@
                   <input type="range" class="calc-forma-slider-price-input" />
                 </label>
                 <div class="calc-slider">
-                  <div class="vopros"></div>
-                  <div class="calc-slider-price">
-                    <p class="price-title">500 000 ₽</p>
-                    <p class="price-title">3 000 000 ₽</p>
-                    <p class="price-title">5 000 000 ₽</p>
-                  </div>
+                  <p class="price-title1">500 000 ₽</p>
+                  <p class="price-title2">3 000 000 ₽</p>
+                  <p class="price-title3">5 000 000 ₽</p>
                 </div>
               </div>
               <div class="calc-forma-slider-price">
-                <p>Стоимость аренды</p>
-                <div class="calc-forma-edit">
-                  <h4 class="calc-forma-edit-title4">50 000 ₽</h4>
-                  <img class="calc-point" src="point.svg" alt="point" />
-                </div>
-                <div class="calc-slider">
-                  <div class="vopros"></div>
-                  <div class="calc-slider-price">
-                    <p class="price-title">0 ₽</p>
-                    <p class="price-title">50 000 ₽</p>
-                    <p class="price-title">300 000 ₽</p>
+                <label class="calc-forma-all">
+                  <p>Стоимость аренды</p>
+                  <div class="calc-forma-edit">
+                    <h4 class="calc-forma-edit-title4">50 000 ₽</h4>
+                    <img class="calc-point" src="point.svg" alt="point" />
                   </div>
-                </div>
-              </div>
-
-              <div class="calc-forma-slider-price">
-                <p>Фонд оплаты труда</p>
-                <div class="calc-forma-edit">
-                  <h4 class="calc-forma-edit-title4">100 000 ₽</h4>
-                  <img class="calc-point" src="point.svg" alt="point" />
-                </div>
+                  <input type="range" class="calc-forma-slider-price-input" />
+                </label>
                 <div class="calc-slider">
-                  <div class="vopros"></div>
-                  <div class="calc-slider-price">
-                    <p class="price-title">0 ₽</p>
-                    <p class="price-title">100 000 ₽</p>
-                    <p class="price-title">300 000 ₽</p>
-                  </div>
+                  <p class="price-title1">0 ₽</p>
+                  <p class="price-title2">50 000 ₽</p>
+                  <p class="price-title3">300 000 ₽</p>
                 </div>
               </div>
               <div class="calc-forma-slider-price">
-                <p>Прочие расходы</p>
-                <div class="calc-forma-edit">
-                  <h4 class="calc-forma-edit-title4">30 000 ₽</h4>
-                  <img class="calc-point" src="point.svg" alt="point" />
-                </div>
-                <div class="calc-slider">
-                  <div class="vopros"></div>
-                  <div class="calc-slider-price">
-                    <p class="price-title">0 ₽</p>
-                    <p class="price-title">30 000 ₽</p>
-                    <p class="price-title">200 000 ₽</p>
+                <label class="calc-forma-all">
+                  <p>Фонд оплаты труда</p>
+                  <div class="calc-forma-edit">
+                    <h4 class="calc-forma-edit-title4">100 000 ₽</h4>
+                    <img class="calc-point" src="point.svg" alt="point" />
                   </div>
+                  <input type="range" class="calc-forma-slider-price-input" />
+                </label>
+                <div class="calc-slider">
+                  <p class="price-title1">0 ₽</p>
+                  <p class="price-title2">100 000 ₽</p>
+                  <p class="price-title3">300 000 ₽</p>
+                </div>
+              </div>
+              <div class="calc-forma-slider-price">
+                <label class="calc-forma-all">
+                  <p>Прочие расходы</p>
+                  <div class="calc-forma-edit">
+                    <h4 class="calc-forma-edit-title4">30 000 ₽</h4>
+                    <img class="calc-point" src="point.svg" alt="point" />
+                  </div>
+                  <input type="range" class="calc-forma-slider-price-input" />
+                </label>
+                <div class="calc-slider">
+                  <p class="price-title1">0 ₽</p>
+                  <p class="price-title2">30 000 ₽</p>
+                  <p class="price-title3">200 000 ₽</p>
                 </div>
               </div>
             </div>
@@ -527,5 +524,30 @@
       </div>
     </section>
     <!--block_calc-->
+    <!--block_map-->
+    <div class="map">
+      <div class="container">
+        <h2 class="block-forma-title">Наша сеть</h2>
+        <section class="map-table">
+          <div class="map-table-form">
+            <h2 class="block-forma-title">132</h2>
+            <p class="map-table-form-title-p">розничных торговых точек</p>
+          </div>
+          <div class="map-table-form">
+            <h2 class="block-forma-title">147</h2>
+            <p class="map-table-form-title-p">франшизных торговых точек</p>
+          </div>
+          <div class="map-table-form">
+            <h2 class="block-forma-title">16</h2>
+            <p class="map-table-form-title-p">Точек на стадии запуска</p>
+          </div>
+          <div class="map-table-form">
+            <h2 class="block-forma-title">115</h2>
+            <p class="map-table-form-title-p">городов</p>
+          </div>
+        </section>
+      </div>
+    </div>
+    <!--block_map-->
   </body>
 </html>
