--- a/index.html
+++ b/index.html
@@ -528,6 +528,7 @@
     <div class="map">
       <div class="container">
         <h2 class="block-forma-title">Наша сеть</h2>
+        <img class="img-map-mini" src="mapmini.png" alt="map" />
         <section class="map-table">
           <div class="map-table-form">
             <h2 class="block-forma-title">132</h2>
