--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/support.css" />
     <link rel="stylesheet" href="css/calc.css" />
     <link rel="stylesheet" href="css/map.css" />
+    <link rel="stylesheet" href="css/workshit.css" />
     <title>Prodaem kolesa</title>
   </head>
   <body>
@@ -550,5 +551,11 @@
       </div>
     </div>
     <!--block_map-->
+    <!--block_workshit-->
+    <section class="workshit">
+      <h2 class="block-forma-title">Открой свой бизнез</h2>
+      <div class="container"></div>
+    </section>
+    <!--block_workshit-->
   </body>
 </html>
