--- a/index.html
+++ b/index.html
@@ -527,24 +527,24 @@
     <!--block_calc-->
     <!--block_map-->
     <div class="map">
+      <h2 class="block-forma-title">Наша сеть</h2>
+      <img class="img-map-mini" src="mapmini.png" alt="map" />
       <div class="container">
-        <h2 class="block-forma-title">Наша сеть</h2>
-        <img class="img-map-mini" src="mapmini.png" alt="map" />
         <section class="map-table">
           <div class="map-table-form">
-            <h2 class="block-forma-title">132</h2>
+            <h2 class="number-map">132</h2>
             <p class="map-table-form-title-p">розничных торговых точек</p>
           </div>
           <div class="map-table-form">
-            <h2 class="block-forma-title">147</h2>
+            <h2 class="number-map">147</h2>
             <p class="map-table-form-title-p">франшизных торговых точек</p>
           </div>
           <div class="map-table-form">
-            <h2 class="block-forma-title">16</h2>
+            <h2 class="number-map">16</h2>
             <p class="map-table-form-title-p">Точек на стадии запуска</p>
           </div>
           <div class="map-table-form">
-            <h2 class="block-forma-title">115</h2>
+            <h2 class="number-map">115</h2>
             <p class="map-table-form-title-p">городов</p>
           </div>
         </section>
