--- a/index.html
+++ b/index.html
@@ -553,8 +553,38 @@
     <!--block_map-->
     <!--block_workshit-->
     <section class="workshit">
-      <h2 class="block-forma-title">Открой свой бизнез</h2>
-      <div class="container"></div>
+      <h2 class="workshit-title">Открой свой бизнез</h2>
+      <div class="container">
+        <div class="steps">
+          <div class="steps-number">
+            <div class="steps-part">
+              <h2 class="steps-number-title">1</h2>
+              <div class="steps-number-line"></div>
+            </div>
+            <p class="steps-description">
+              Заполните анкету и дождитесь согласования
+            </p>
+          </div>
+          <div class="steps-number">
+            <div class="steps-part">
+              <h2 class="steps-number-title">2</h2>
+              <div class="steps-number-line"></div>
+            </div>
+            <p class="steps-description">
+              Заполните анкету и дождитесь согласования
+            </p>
+          </div>
+          <div class="steps-number">
+            <div class="steps-part">
+              <h2 class="steps-number-title">3</h2>
+              <div class="steps-number-line"></div>
+            </div>
+            <p class="steps-description">
+              Заполните анкету и дождитесь согласования
+            </p>
+          </div>
+        </div>
+      </div>
     </section>
     <!--block_workshit-->
   </body>
