--- a/index.html
+++ b/index.html
@@ -562,7 +562,8 @@
               <div class="steps-number-line"></div>
             </div>
             <p class="steps-description">
-              Заполните анкету и дождитесь согласования
+              Заполните анкету<br />
+              и дождитесь согласования
             </p>
           </div>
           <div class="steps-number">
@@ -571,7 +572,8 @@
               <div class="steps-number-line"></div>
             </div>
             <p class="steps-description">
-              Заполните анкету и дождитесь согласования
+              Подпишите необходимые<br />
+              документы
             </p>
           </div>
           <div class="steps-number">
@@ -580,7 +582,8 @@
               <div class="steps-number-line"></div>
             </div>
             <p class="steps-description">
-              Заполните анкету и дождитесь согласования
+              Сделайте ремонт<br />
+              и откройте свой бизнес
             </p>
           </div>
         </div>
