--- a/index.html
+++ b/index.html
@@ -587,6 +587,35 @@
             </p>
           </div>
         </div>
+        <section class="request">
+          <div class="request-personal-data">
+            <h4 class="request-title">Заполните заявку за 1 минуту</h4>
+            <input type="text" class="legal-entity" />
+            <input type="text" class="inn" />
+            <input type="text" class="name" />
+            <div class="phone-email">
+              <input type="text" class="phone" />
+              <input type="text" class="email" />
+            </div>
+            <input type="checkbox" class="request-checkbox" />
+            <input name="tire center" list="tire" />
+            <datalist id="tire">
+              <option value="Шинный центр" />
+              <option value="Пункт выдачи заказов" />
+            </datalist>
+          </div>
+          <div class="request-adress">
+            <h4 class="request-title">Укажите адрес планируемого магазина</h4>
+            <input type="text" class="city" />
+            <input type="text" class="address" />
+          </div>
+          <div class="request-button-form">
+            <h5 class="conditions">
+              Заполняя форму, я принимаю условия передачи информации
+            </h5>
+            <button class="forma-bid-button">Оставить заявку</button>
+          </div>
+        </section>
       </div>
     </section>
     <!--block_workshit-->
