--- a/index.html
+++ b/index.html
@@ -590,15 +590,36 @@
         <section class="request">
           <div class="request-personal-data">
             <h4 class="request-title">Заполните заявку за 1 минуту</h4>
-            <input type="text" class="legal-entity" />
-            <input type="text" class="inn" />
-            <input type="text" class="name" />
+            <input
+              type="text"
+              class="legal-entity"
+              placeholder="Юридическое лицо"
+            />
+            <input type="text" class="inn" placeholder="ИНН" />
+            <input type="text" class="name" placeholder="Ваше имя" />
             <div class="phone-email">
-              <input type="text" class="phone" />
-              <input type="text" class="email" />
+              <input
+                type="text"
+                class="phone"
+                placeholder="Мобильный телефон"
+              />
+              <input
+                type="text"
+                class="email"
+                placeholder="Электронная почта"
+              />
             </div>
-            <input type="checkbox" class="request-checkbox" />
-            <input name="tire center" list="tire" />
+            <input
+              type="checkbox"
+              class="request-checkbox"
+              placeholder="У меня есть свой бизнес"
+            />
+            <input
+              class="tire"
+              name="tire center"
+              list="tire"
+              placeholder="Шинный центр"
+            />
             <datalist id="tire">
               <option value="Шинный центр" />
               <option value="Пункт выдачи заказов" />
@@ -606,8 +627,8 @@
           </div>
           <div class="request-adress">
             <h4 class="request-title">Укажите адрес планируемого магазина</h4>
-            <input type="text" class="city" />
-            <input type="text" class="address" />
+            <input type="text" class="city" placeholder="Город" />
+            <input type="text" class="adress" placeholder="Адрес помещения" />
           </div>
           <div class="request-button-form">
             <h5 class="conditions">
