--- a/index.html
+++ b/index.html
@@ -564,6 +564,9 @@
               Заполните анкету<br />
               и дождитесь согласования
             </p>
+            <p class="steps-description767">
+              Заполните анкету и дождитесь согласования
+            </p>
           </div>
           <div class="steps-number">
             <div class="steps-number-line-left"></div>
@@ -573,6 +576,7 @@
               Подпишите необходимые<br />
               документы
             </p>
+            <p class="steps-description767">Подпишите необходимые документы</p>
           </div>
           <div class="steps-number">
             <div class="steps-number-line-left"></div>
@@ -581,6 +585,9 @@
             <p class="steps-description">
               Сделайте ремонт<br />
               и откройте свой бизнес
+            </p>
+            <p class="steps-description767">
+              Сделайте ремонт и откройте свой бизнес
             </p>
           </div>
         </div>
