--- a/index.html
+++ b/index.html
@@ -672,13 +672,36 @@
       <div class="container">
         <div class="footer_contacts_telephone">
           <h4 class="footer_title">Зарабатывайте с нами</h4>
-          <h4 class="telephone1">89872928816</h4>
-          <h4 class="telephone2">8 800 777 88 55</h4>
+          <div class="footer-telphone">
+            <h4 class="telephone1">89872928816</h4>
+            <h4 class="telephone2">8 800 777 88 55</h4>
+          </div>
         </div>
         <div class="ref">
-          <a href="" class="franchise">Франшиза</a>
-          <a href="" class="franchise">Малому бизнесу и ИП</a>
-          <a href="" class="franchise">Корпорациям</a>
+          <div class="ref-forma">
+            <a href="" class="franchise">Франшиза</a>
+            <a href="" class="franchise">Малому бизнесу и ИП</a>
+            <a href="" class="franchise">Корпорациям</a>
+          </div>
+          <a href="" class="ref-email">info@prodaem-kolesa.ru</a>
+        </div>
+        <div class="content">
+          <p class="footer-info">Copyright 2009 - 2021 All rights reserved</p>
+          <div class="social-media">
+            <a href=""
+              ><img src="/landing-project-wheels/vk.svg" alt="vk.ru"
+            /></a>
+            <a href=""
+              ><img src="/landing-project-wheels/f.svg" alt="facebook"
+            /></a>
+            <a href=""
+              ><img src="/landing-project-wheels/t.svg" alt="tiktok"
+            /></a>
+            <a href=""
+              ><img src="/landing-project-wheels/d.svg" alt="d.com"
+            /></a>
+            <a href=""><img src="inst.svg" alt="instagram" /></a>
+          </div>
         </div>
       </div>
     </div>
